--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
 title: Viralstorm Homepage
 description: This page will link to things like Video Snippets on YT, Itch.io Dev Blogs, and GitHub releases on the main Repository! Bookmark this page to make sure you dont miss any updates :)
